# data_engineering

./: .gitignore  pyproject.toml
data_engineering_jornada/: Ingestion.ipynb
ecommerce/: dbt_project.yml
ecommerce/models/: _sources.yaml
ecommerce/models/bronze/: bronze_price_competitors.sql  bronze_products.sql  bronze_sales.sql  customer.sql
ecommerce/models/gold/customer_success/: customer_segmentation.sql
ecommerce/models/gold/pricing/: price_competitors.sql
ecommerce/models/gold/sales/: timebased_sales.sql
ecommerce/models/silver/: silver_customers.sql  silver_price_competitors.sql  silver_products.sql  silver_sales.sql
