[project]
name = "dataa-engineerin-jotnada"
version = "0.1.0"
description = ""
authors = [
    {name = "ErickVisone",email = "erickvisone@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "boto3 (>=1.43.6,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
