[project]
name = "dataa-engineerin-jotnada"
version = "0.1.0"
description = ""
authors = [
    {name = "ErickVisone",email = "erickvisone@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "boto3 (>=1.43.6,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "certifi (>=2026.4.22,<2027.0.0)",
    "urllib3 (>=2.7.0,<3.0.0)",
    "botocore (>=1.43.6,<2.0.0)",
    "requests (>=2.34.0,<3.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
